--- a/album3.html
+++ b/album3.html
@@ -39,6 +39,7 @@
           */
       pointer-events: none;
       z-index: 9999;
+      position: absolute;
         }
   
 
@@ -336,7 +337,7 @@
       height: 100vh;
       width: 100vw;
       background-image: url('album_back3.png');
-      background-size: 0% auto;
+      background-size: cover;
       background-position: left top;
 
     }
