--- a/album1.html
+++ b/album1.html
@@ -331,7 +331,7 @@
       height: 100vh;
       width: 100vw;
       margin: 0;
-      background:black no-repeat;
+      background:url('focusmode_back.png') no-repeat;
       background-size: 100% auto;
     }
 
