--- a/album5.html
+++ b/album5.html
@@ -320,7 +320,7 @@
       height: 100vh;
       width: 100vw;
       margin: 0;
-      background:black no-repeat;
+      background:url('focusmode_back.png') no-repeat;
       background-size: 100% auto;
     }
 
