--- a/albums.html
+++ b/albums.html
@@ -16,13 +16,16 @@
       align-items: center;
       background:transparent;
       border: none;
-      margin-top: 1rem;}
+      padding-top: 6rem;
+      padding-left: 45% ;
+      z-index: 999;}
 </style>
 
 <body>
-  <button id="goStart" onclick="goStart()"><img src="gobacktostart.png" style="width: 10rem; height:auto; justify-content: center; "></button>
-
-  <div class="carousel" id="carousel">
+  <button id="goStart" onclick="goStart()">
+    <img src="gobacktostart.png" style="width: 10rem; height:auto; justify-content: center; align-items: center;">
+  </button>
+  <div class="carousel" id="carousel"> 
     <div class="carousel-item" onclick="navigateToPage('album1.html')">
       <div class="carousel-box">
         <img src="album1.png">
@@ -39,8 +42,6 @@
     <div class="carousel-item" onclick="navigateToPage('album3.html')">
       <div class="carousel-box"></style>
 </head>
-
-<body>
 
 
 
