--- a/album2.html
+++ b/album2.html
@@ -468,10 +468,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["A Kiss For Amanda", "Jingle Punks", "Jazz Tape", "Three Wise People", "Up on the Housetop"];
+    var singer = ["DJ Williams", "Auld Lang Syne", "Andrew Huang", "E's Jammy Jams","E's Jammy Jams"];
     var cover = ["album2_1","album2_2", "album2_3", "album2_4", "album2_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["A Kiss For Amanda - DJ Williams", "Auld Lang Syne (Vocals) - Jingle Punks", "Jazz Tape - Andrew Huang", "Three Wise People - E's Jammy Jams", "Up on the Housetop (Instrumental) - E's Jammy Jams"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
