--- a/album2.html
+++ b/album2.html
@@ -437,12 +437,13 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
+          Beneath the spell of jazz, my surroundings blurred, <br>
+          and the pages of the book I held became a portal to a world where <br>
+          the rhythm of the prose harmonized with the improvisation of the music, <br>
+          creating a symphony for the senses. </p>
 
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
