--- a/album4.html
+++ b/album4.html
@@ -427,12 +427,11 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
-
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
+          With the mellifluous jazz as my guide,<br> the novel became a journey through landscapes of imagination,<br>
+           and the prose, like the soft hum of a double bass,<br>
+            resonated in the chambers of my mind, inviting me to explore the depths <br>
+            of the story while basking in the enchanting ambiance of the music."</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
@@ -458,10 +457,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["Silent Night", "We Wish You a Merry Christmas ", "Cocktail Hour", "Quiet", "Up on the Housetop"];
+    var singer = ["E's Jammy Jams", "E's Jammy Jams", "Aaron Kenny", "The Mini Vandals", "E's Jammy Jams"];
     var cover = ["album4_1","album4_2", "album4_3", "album4_4", "album4_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["Silent Night (Jazz) - E's Jammy Jams", "We Wish You a Merry Christmas (Jazz) - E's Jammy Jams", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Up on the Housetop (Instrumental) - E's Jammy Jams"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
