--- a/album5.html
+++ b/album5.html
@@ -427,12 +427,12 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
-
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
+          The jazz ensemble painted a vibrant backdrop to the novel's narrative,<br> 
+          transforming each sentence into a musical note that played <br>
+          in harmony with the improvisational spirit of the saxophone,<br>
+           creating an immersive experience where literature<br>
+            and music melded seamlessly.</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
@@ -458,10 +458,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["Nighttime Stroll ", "Paradox", "The Gentlemen", "Carried", "Jazz Tape"];
+    var singer = ["E's Jammy Jams", "Quincas Moreira", "DivKid", "Lauren Duski", "Andrew Huang"];
     var cover = ["album5_1","album5_2", "album5_3", "album5_4", "album5_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["Nighttime Stroll - E's Jammy Jams", "Paradox - Quincas Moreira", "The Gentlemen - DivKid", "Carried - Lauren Duski", "Jazz Tape - Andrew Huang"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
