--- a/album7.html
+++ b/album7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> 
   <title>Album 1</title>
   <link rel="stylesheet" href="./style.css">
   <canvas id='canv'></canvas>
@@ -429,12 +429,12 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
-
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
+          As the clarinet wove intricate melodies,<br> 
+          the novel's prose became a melodic river, carrying me through<br>
+           the landscapes of imagination. It was a journey where the boundaries<br>
+            between fiction and reality blurred, and the music provided a soundtrack to the novel,<br>
+             enhancing the emotional depth of the characters and their stories.</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
@@ -460,10 +460,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["One Last Time", "Three Wise People", "Walk Through the Park", "Soft Feeling", "Jingle Punks"];
+    var singer = ["South London HiFi", "E's Jammy Jams", "TrackTribe", "Cheel", "Auld Lang Syne"];
     var cover = ["album7_1","album7_2", "album7_3", "album7_4", "album7_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["One Last Time - South London HiFi", "Three Wise People - E's Jammy Jams", "Walk Through the Park - TrackTribe", "Soft Feeling - Cheel", "Auld Lang Syne (Vocals) - Jingle Punks"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
