--- a/album3.html
+++ b/album3.html
@@ -428,12 +428,12 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
 
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+          In the dim glow of a table lamp, the jazz notes and the sentences<br> 
+          of the novel waltzed together, crafting an intimate dance<br>
+          where the eloquence of literature met the soul-stirring cadence of a saxophone,<br>
+           weaving a tapestry of enchantment.</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
@@ -459,10 +459,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["Carried", "Hurts So Good Blues", "Lazy Walk", "Soft Feeling", "Three Wise People"];
+    var singer = ["Lauren Duski", "Unicorn Heads", "Cheel", "Cheel", "E's Jammy Jams"];
     var cover = ["album3_1","album3_2", "album3_3", "album3_4", "album3_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["Carried - Lauren Duski","Hurts So Good Blues - Unicorn Heads", "Lazy Walk - Cheel", "Soft Feeling - Cheel", "Three Wise People - E's Jammy Jams"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
