--- a/album6.html
+++ b/album6.html
@@ -427,12 +427,11 @@
 
       </div>
       <div>
-        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
-
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
-          approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
-          jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
+        <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
+          With every sentence, the jazz ensemble painted a canvas of emotions,<br>
+           the highs and lows resonating with the highs and lows of the music, <br>
+           as if the author and the musicians were collaborating in a celestial duet,<br>
+           crafting an experience that transcended the boundaries of literature and sound</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
@@ -458,10 +457,10 @@
     <!-- <div id=" focusTitle"></div> -->
   </div>
   <script>
-    var titles = ["I fall in love too easily", "Lazy Walk", "Cocktail Hour", "Quiet", "Ipanema Daydream"];
-    var singer = ["Chat Baker", "Cheel", "Aaron Kenny", "The Mini Vandals", "Bird Creek"];
+    var titles = ["Swing Theory", "We Wish You a Merry Christmas", "Jane Street", "Quiet", "Ipanema Daydream"];
+    var singer = ["Freedom Trail Studio", "E's Jammy Jams", "TrackTribe", "The Mini Vandals", "Bird Creek"];
     var cover = ["album6_1","album6_2", "album6_3", "album6_4", "album6_5"];
-    var audioSrc = ["Boom Bap Flick - Quincas Moreira", "Lazy Walk - Cheel", "Cocktail Hour - Aaron Kenny", "Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
+    var audioSrc = ["Swing Theory - Freedom Trail Studio", "We Wish You a Merry Christmas (Jazz) - E's Jammy Jams", "Jane Street - TrackTribe","Quiet - The Mini Vandals", "Ipanema Daydream - Bird Creek"];
     var i = 0, j = 0;
 
     function onNextClickHandler() {
