--- a/album3.html
+++ b/album3.html
@@ -432,8 +432,9 @@
 
           In the dim glow of a table lamp, the jazz notes and the sentences<br> 
           of the novel waltzed together, crafting an intimate dance<br>
-          where the eloquence of literature met the soul-stirring cadence of a saxophone,<br>
+          where the eloquence of literature met the soul-stirring cadence of a saxophone,
            weaving a tapestry of enchantment.</p>
+          </p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
