--- a/album4.html
+++ b/album4.html
@@ -430,8 +430,8 @@
         <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">
           With the mellifluous jazz as my guide,<br> the novel became a journey through landscapes of imagination,<br>
            and the prose, like the soft hum of a double bass,<br>
-            resonated in the chambers of my mind, inviting me to explore the depths <br>
-            of the story while basking in the enchanting ambiance of the music."</p>
+            resonated in the chambers of my mind, inviting me to <br> explore the depths 
+            of the story while basking <br>in the enchanting ambiance of the music.</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
                     <img src="volume.png" style="width: 2rem; height: 2rem; margin-right: 1rem;">
