--- a/album7.html
+++ b/album7.html
@@ -433,7 +433,7 @@
           As the clarinet wove intricate melodies,<br> 
           the novel's prose became a melodic river, carrying me through<br>
            the landscapes of imagination. It was a journey where the boundaries<br>
-            between fiction and reality blurred, and the music provided a soundtrack to the novel,<br>
+            between fiction and reality blurred, and the music provided a soundtrack to the novel,
              enhancing the emotional depth of the characters and their stories.</p>
       </div>
       <div style="display: flex; align-items: center; justify-content: center; left: 0; margin-bottom:1rem; margin-top: 3rem;">
