--- a/album1.html
+++ b/album1.html
@@ -441,8 +441,8 @@
       <div>
         <p style="color: white; font-size: 1.2rem; text-align: center; font-style: times; line-height: 140%; margin-top: 0; padding: 2rem;">Chet Baker
 
-          was an iconic jazz trumpeter and vocalist known for <br> is lyrical playing and distinctively smooth singing
-          style. Rising to<br> prominence in the 1950s, Baker's trumpet solos showcased a delicate yet <br>emotive
+          was an iconic jazz trumpeter and vocalist<br>v known for  is lyrical playing and distinctively smooth singing
+          style.<br>Baker's trumpet solos showcased a delicate yet emotive<br>
           approach, while his vocals added a unique charm to his musical repertoire. <br>His enduring influence on the
           jazz genre solidifies his status <br> as a legendary figure in the history of jazz.</p>
       </div>
