--- a/album2.html
+++ b/album2.html
@@ -413,12 +413,12 @@
    
           <img src="album2_1.png" alt="cover" id="cover">
         </div>
-        <audio id="audioPlayer" src="Boom Bap Flick - Quincas Moreira.mp3" onloadstart="this.volume=0.05"></audio>
+        <audio id="audioPlayer" src="A Kiss For Amanda - DJ Williams.mp3" onloadstart="this.volume=0.05"></audio>
    
 
         <div class="music-info">
-          <h4 id="title">I fall in love too easily</h4>
-          <p id="singer">Chat Baker</p>
+          <h4 id="title">A Kiss For Amanda</h4>
+          <p id="singer">A Kiss For Amanda - DJ Williams</p>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
           </div>
