--- a/album3.html
+++ b/album3.html
@@ -404,12 +404,12 @@
    
           <img src="album3_1.png" alt="cover" id="cover">
         </div>
-        <audio id="audioPlayer" src="Boom Bap Flick - Quincas Moreira.mp3" onloadstart="this.volume=0.05"></audio>
+        <audio id="audioPlayer" src="Carried - Lauren Duski.mp3" onloadstart="this.volume=0.05"></audio>
    
 
         <div class="music-info">
-          <h4 id="title">I fall in love too easily</h4>
-          <p id="singer">Chat Baker</p>
+          <h4 id="title">Carried</h4>
+          <p id="singer">Lauren Duski</p>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
           </div>
