--- a/album5.html
+++ b/album5.html
@@ -403,12 +403,12 @@
    
           <img src="album5_1.png" alt="cover" id="cover">
         </div>
-        <audio id="audioPlayer" src="Boom Bap Flick - Quincas Moreira.mp3" onloadstart="this.volume=0.05"></audio>
+        <audio id="audioPlayer" src="Nighttime Stroll - E's Jammy Jams.mp3" onloadstart="this.volume=0.05"></audio>
    
 
         <div class="music-info">
-          <h4 id="title">I fall in love too easily</h4>
-          <p id="singer">Chat Baker</p>
+          <h4 id="title">Nighttime Stroll</h4>
+          <p id="singer">E's Jammy Jams</p>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
           </div>
