--- a/album7.html
+++ b/album7.html
@@ -405,12 +405,12 @@
    
           <img src="album7_1.png" alt="cover" id="cover">
         </div>
-        <audio id="audioPlayer" src="Boom Bap Flick - Quincas Moreira.mp3" onloadstart="this.volume=0.05"></audio>
+        <audio id="audioPlayer" src="One Last Time - South London HiFi.mp3" onloadstart="this.volume=0.05"></audio>
    
 
         <div class="music-info">
-          <h4 id="title">I fall in love too easily</h4>
-          <p id="singer">Chat Baker</p>
+          <h4 id="title">One Last Time</h4>
+          <p id="singer">South London HiFi</p>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
           </div>
