--- a/album2.html
+++ b/album2.html
@@ -475,14 +475,17 @@
     var audioSrc = ["A Kiss For Amanda - DJ Williams", "Auld Lang Syne (Vocals) - Jingle Punks", "Jazz Tape - Andrew Huang", "Three Wise People - E's Jammy Jams", "Up on the Housetop (Instrumental) - E's Jammy Jams"];
     var i = 0, j = 0;
 
+    var playerUrlForm = true;
     function onNextClickHandler() {
       i++;
       titleChangeHandler();
+      onPlayCheck();
     };
     function onPrevClickHandler() {
       i--;
 
       titleChangeHandler();
+      onPlayCheck();
     };
     function titleChangeHandler() {
       if (i <= 0) {
@@ -501,29 +504,32 @@
       document.getElementById("cover").src = cover[j] + ".png";
       document.getElementById("audioPlayer").src = audioSrc[j] + ".mp3";
     }
-    var playerUrlForm = false;
-    var playerUrl
-    var endCheck;
-    function onPlayerClickHandler() {
-      playerUrlForm = !playerUrlForm;
-      var audio = document.getElementById('audioPlayer');
+    var audio = document.getElementById('audioPlayer');
+    function onPlayCheck() {
       if (playerUrlForm == false) {
+        console.log("playing");
         playerUrl = "stop.png";
         audio.play();
         endCheck = setInterval(endHandler, 1000);
       }
       else {
+        console.log("stoped");
         playerUrl = "play.png";
         audio.pause();
         clearInterval(endCheck);
       }
+    }
+    var playerUrl
+    var endCheck;
+    function onPlayerClickHandler() {
+      playerUrlForm = !playerUrlForm;
+      onPlayCheck();
 
       document.getElementById("play").style.background = `url(${playerUrl})no-repeat`;
       document.getElementById("play").style.backgroundSize = `cover`;
       document.getElementById("focusPlay").style.background = `url(${playerUrl})no-repeat`;
       document.getElementById("focusPlay").style.backgroundSize = `cover`;
-    };
-    const endHandler = () => {
+    };   const endHandler = () => {
       if (audio.ended == true) {
         onNextClickHandler();
         onPlayerClickHandler();
