--- a/album7.html
+++ b/album7.html
@@ -466,14 +466,17 @@
     var audioSrc = ["One Last Time - South London HiFi", "Three Wise People - E's Jammy Jams", "Walk Through the Park - TrackTribe", "Soft Feeling - Cheel", "Auld Lang Syne (Vocals) - Jingle Punks"];
     var i = 0, j = 0;
 
+    var playerUrlForm = true;
     function onNextClickHandler() {
       i++;
       titleChangeHandler();
+      onPlayCheck();
     };
     function onPrevClickHandler() {
       i--;
 
       titleChangeHandler();
+      onPlayCheck();
     };
     function titleChangeHandler() {
       if (i <= 0) {
@@ -492,28 +495,33 @@
       document.getElementById("cover").src = cover[j] + ".png";
       document.getElementById("audioPlayer").src = audioSrc[j] + ".mp3";
     }
-    var playerUrlForm = false;
-    var playerUrl
-    var endCheck;
-    function onPlayerClickHandler() {
-      playerUrlForm = !playerUrlForm;
-      var audio = document.getElementById('audioPlayer');
+    var audio = document.getElementById('audioPlayer');
+    function onPlayCheck() {
       if (playerUrlForm == false) {
+        console.log("playing");
         playerUrl = "stop.png";
         audio.play();
         endCheck = setInterval(endHandler, 1000);
       }
       else {
+        console.log("stoped");
         playerUrl = "play.png";
         audio.pause();
         clearInterval(endCheck);
       }
+    }
+    var playerUrl
+    var endCheck;
+    function onPlayerClickHandler() {
+      playerUrlForm = !playerUrlForm;
+      onPlayCheck();
 
       document.getElementById("play").style.background = `url(${playerUrl})no-repeat`;
       document.getElementById("play").style.backgroundSize = `cover`;
       document.getElementById("focusPlay").style.background = `url(${playerUrl})no-repeat`;
       document.getElementById("focusPlay").style.backgroundSize = `cover`;
     };
+    
     const endHandler = () => {
       if (audio.ended == true) {
         onNextClickHandler();
